Bug 114952 - filep is still used in soltools/mkdepend/parse.c
Summary: filep is still used in soltools/mkdepend/parse.c
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-10 17:12 UTC by himajin100000
Modified: 2018-01-30 13:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2018-01-10 17:12:13 UTC
Description:
https://gerrit.libreoffice.org/#/c/39021/2/soltools/mkdepend/parse.c,unified

the parameter filep is removed from deftype in this commit, but the filep is still used as in debug(0,("%s, line %d: #elif %s ", file->i_file,  filep->f_line, p));

I encountered this problem when I tried to build my own debug build for my first try.

Steps to Reproduce:
N/A

Actual Results:  
debug build cannot be built due to this issue.

Expected Results:
debug build can be built.


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 Aron Budea 2018-01-10 17:41:03 UTC
Noel, could you please check this?
I wonder where this file is actually compiled, I have no trouble building debug builds in Linux or Windows.
Comment 2 himajin100000 2018-01-10 18:06:23 UTC
additional comment(possibly useful, but I doubt that):

* I'm using Windows 10 ver 1709

* I decided on going along the hard way :-)
https://wiki.documentfoundation.org/Development/BuildingOnWindows

* I set locale for non-Unicode programs to en-US,as otherwise encoding error happened.

* in cygwin64 I used gnupg2 instead of gnupg, as cygwin64 requested me to separately download the old libusb 0.1 stuffs.

* /cygdrive/c/sources/libo-core/autogen.sh --enable-64-bit --enable-debug --enable-selective-debuginfo="sw/ sc/" --with-external-tar=/cygdrive/c/sources/lo-externalsrc --with-junit=/cygdrive/c/sources/junit-4.12.jar  --with-hamcrest=/cygdrive/c/sources/hamcrest-core-1.3.jar --with-ant-home=/cygdrive/c/sources/apache-ant-1.10.1 --enable-pch --disable-ccache --with-windows-sdk=8.1 --with-visual-studio=2017

* /cygdrive/c/cygwin64/opt/lo/bin/make gb_COLOR=1 dbglevel=3

* JDK's version was 1.8.0_152, as Ant failed because tools.jar is gone in JDK9
see 
https://docs.oracle.com/javase/9/migrate/toc.htm#JSMIG-GUID-A78CC891-701D-4549-AA4E-B8DD90228B4B
https://github.com/apache/ant/blob/b7d1e9bde44cb8e5233d6e70bb96e14cbb2f3e2d/src/main/org/apache/tools/ant/launch/Launcher.java#L256

* message around errors:( question marks are what really was shown in cygwin64 terminal)

??: ?????? ????:   c:\sources\libo-core\soltools\mkdepend\collectdircontent.hxx
C:/sources/libo-core/soltools/mkdepend/parse.c(253): error C2065: 'filep': ?????                                                                                                                                                 ?????????
C:/sources/libo-core/soltools/mkdepend/parse.c(253): error C2223: '->f_line' : ?                                                                                                                                                 ??????????????????????????
C:/sources/libo-core/soltools/mkdepend/parse.c(285): error C2065: 'filep': ?????                                                                                                                                                 ?????????
C:/sources/libo-core/soltools/mkdepend/parse.c(285): error C2223: '->f_line' : ?                                                                                                                                                 ??????????????????????????
C:/sources/libo-core/soltools/mkdepend/parse.c(290): error C2065: 'filep': ?????                                                                                                                                                 ?????????
C:/sources/libo-core/soltools/mkdepend/parse.c(290): error C2223: '->f_line' : ?                                                                                                                                                 ??????????????????????????
C:/sources/libo-core/soltools/mkdepend/parse.c(302): error C2065: 'filep': ?????                                                                                                                                                 ?????????
C:/sources/libo-core/soltools/mkdepend/parse.c(302): error C2223: '->f_line' : ?                                                                                                                                                 ??????????????????????????
C:/sources/libo-core/soltools/mkdepend/parse.c(350): error C2065: 'filep': ?????                                                                                                                                                 ?????????
C:/sources/libo-core/soltools/mkdepend/parse.c(350): error C2223: '->f_line' : ?
Comment 3 Aron Budea 2018-01-10 18:30:09 UTC
You should probably use "--enable-dbgutil" instead of "--enable-debug", and I personally don't use any other debug-related parameters during autogen config or make (so no "enable-selective-debuginfo" and "dbglevel" are given).
Comment 4 Commit Notification 2018-01-12 06:02:38 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=920447d4a5df9a4f27726a943417e946108ad3ac

tdf#114952 filep is still used in soltools/mkdepend/parse.c

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 himajin100000 2018-01-30 13:40:50 UTC
This bug seems fixed, and Horray!I've finally successfully made my own debug build! 

(but compiling required some modifications on other areas unrelated to this bug. Such bugs include ones like "stylepool.cxx#410 is calling createIterator with 0 paramters")