tdf#114952 filep is still used in soltools/mkdepend/parse.c

regression from

    commit 18f513145477d4621290253d936dad7a40ee4c05
    Date:   Tue Jun 20 19:54:23 2017 +0200
    loplugin:unusedfields store..svl

somewhat tricky to reproduce on linux, I had to do

    make soltools CPPFLAGS=-DDEBUG

Change-Id: I4b1989efc02b9e864432b96cf4f71a29e581bcdb
Reviewed-on: https://gerrit.libreoffice.org/47755
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>